--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
               <!--<h1 class="brand-heading">Maxime Wabartha</h1-->
               <img class="img-responsive" src="img/profile_small.png" alt="">
               <p></p>
-              <p class="intro-text">Master student in machine learning <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/">@ENS Paris-Saclay</a><br/>
+              <h3>Master student in machine learning</h2>
+              <p class="intro-text">Reinforcement Learning, Computer Vision<br/>
+                <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/">Master MVA @ENS Paris-Saclay</a><br/>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -73,14 +75,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <h2>About me</h2>
+            <p>Personal presentation here. MVA master.  Centrale Lille engineer. Link to CV. State center of interest. </p>
           </div>
         </div>
       </div>
@@ -90,9 +86,18 @@
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          <h2>Projects</h2>
+          <h4>AxonDeepSeg</h4>
+            <p>
+              AxonDeepSeg is a segmentation software for microscopy data of nerve fibers. It is a CNN using a variation of the U-net architecture to segment microstructures (axon and myelin) from electron microscopy data from the spinal cord. AxonDeepSeg is released as an open-source software (Python, TensorFlow) available online on <a href="https://github.com/neuropoly/axondeepseg">[GitHub]</a>.<br/>
+              The project is the result of the collaboration of several people. It is lead by the neuroimagery laboratory <a href="https://www.neuro.polymtl.ca/home">NeuroPoly</a>, from Polytechnique Montréal. I took over the project in May 2017 and worked on it until September 2017 as part of a summer internship.
+              The documentation can be found <a href="https://neuropoly.github.io/axondeepseg/">[here]</a>.<br/>
+              I am also one of the two lead authors of a scientific article on this software and the structure we developed. The pre-print is available on <a href="https://arxiv.org/abs/1711.01004">[arXiv]</a>.
+            </p>
+
+
+          <h4>Computer Vision project</h4>
+
         </div>
       </div>
     </section>
@@ -103,7 +108,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact me</h2>
-            <p>Feel free to contact me at: maxime dot wabartha at ens-paris-saclay dot fr.</p>
+            <p>Feel free to contact me at the following address: maxime dot wabartha at ens-paris-saclay dot fr.</p>
           </div>
         </div>
       </div>
