Correction of a link + added what I did at Centrale.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About me</h2>
-            <p>I am a French student currently enrolled in the master MVA (Mathematics, Computer Vision, and Learning) at École Normale Supérieure Paris-Saclay. Previously, I graduated from École Centrale de Lille, where I followed the DAD (Decision and Data Analysis) specialization. My previous internship was made inside the NeuroPoly laboratory in Montréal, where I worked on semantic segmentation of spinal cord microstructures using convolutional neural networks.<br/>
+            <p>I am a French student currently enrolled in the master MVA (Mathematics, Computer Vision, and Learning) at École Normale Supérieure Paris-Saclay. Previously, I graduated with a Master of Engineering from École Centrale de Lille, where I followed the DAD (Decision and Data Analysis) specialization. My previous internship was made inside the NeuroPoly laboratory in Montréal, where I worked on semantic segmentation of spinal cord microstructures using convolutional neural networks.<br/>
 
             My main centers of interest are reinforcement learning and computer vision, but I am passionate by machine learning in general. I am also a strong advocate of open science. You can find my CV <a href="static/cv_WABARTHA.pdf">[here]</a>, and my GitHub account <a href="https://github.com/MaxWab">[here]</a>.</p>
           </div>
@@ -92,7 +92,7 @@
           <h4>AxonDeepSeg (2017)</h4>
             <p>
               AxonDeepSeg is a segmentation software for microscopy data of nerve fibers. It is a CNN using a variation of the U-net architecture to segment microstructures (axon and myelin) from electron microscopy data from the spinal cord. AxonDeepSeg is released as an open-source software (Python, TensorFlow) available online on <a href="https://github.com/neuropoly/axondeepseg">[GitHub]</a>.<br/>
-              The project is the result of the collaboration of several people. It is lead by the neuroimagery laboratory <a href="https://www.neuro.polymtl.ca/home">NeuroPoly</a>, from Polytechnique Montréal. I took over the project in May 2017 and worked on it until September 2017 as part of a summer internship.
+              The project is the result of the collaboration of several people. It is lead by the neuroimagery laboratory <a href="https://www.neuro.polymtl.ca/home">[NeuroPoly]</a>, from Polytechnique Montréal. I took over the project in May 2017 and worked on it until September 2017 as part of a summer internship.
               The documentation can be found <a href="https://neuropoly.github.io/axondeepseg/">[here]</a>.<br/>
               I am also one of the two lead authors of a scientific article on this software and the structure we developed. The pre-print is available on <a href="https://arxiv.org/abs/1711.01004">[arXiv]</a>.
             </p>
