--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2>About me</h2>
             <p>I am a French student currently enrolled in the master MVA (Mathematics, Computer Vision, and Learning) at École Normale Supérieure Paris-Saclay. Previously, I graduated with a Master of Engineering from École Centrale de Lille, where I followed the DAD (Decision and Data Analysis) specialization. My previous internship was made inside the NeuroPoly laboratory in Montréal, where I worked on semantic segmentation of spinal cord microstructures using convolutional neural networks.<br/>
 
-            My main centers of interest are reinforcement learning and computer vision, but I am passionate by machine learning in general. I am also a strong advocate of open science. You can find my CV <a href="static/cv_WABARTHA.pdf">[here]</a>, and my GitHub account <a href="https://github.com/MaxWab">[here]</a>.</p>
+            My main centers of interest are reinforcement learning and computer vision, but I am passionate by machine learning in general. I am strongly interested in open science. You can find my CV <a href="static/cv_WABARTHA.pdf">[here]</a>, and my GitHub account <a href="https://github.com/MaxWab">[here]</a>.</p>
           </div>
         </div>
       </div>
@@ -136,12 +136,12 @@
       </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer 
     <footer>
       <div class="container text-center">
         <p>Copyright &copy; Maxime Wabartha 2018</p>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
