Update e-mail address and status

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <!--<h1 class="brand-heading">Maxime Wabartha</h1-->
               <img class="img-responsive" src="img/profile_small.png" alt="">
               <p></p>
-              <h3>Master student in machine learning</h2>
+              <h3>PhD student in machine learning</h2>
               <p class="intro-text">Reinforcement Learning, Computer Vision<br/>
                 <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/">Master MVA @ENS Paris-Saclay</a><br/>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
