--- a/index.html
+++ b/index.html
@@ -130,7 +130,13 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact me</h2>
-            <p>Feel free to contact me at the following address: maxime dot wabartha at ens-paris-saclay dot fr.</p>
+            <p>Feel free to contact me at the following address: maxime dot wabartha at mail dot mcgill dot ca.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Last update</h2>
+            <p>21-02-2019</p>
           </div>
         </div>
       </div>
